# c_number_nn

./: CMakeLists.txt  README.md  leaks.txt
assets/weights_biases/: biases_neurlayer2.txt  biases_neurlayer3.txt  biases_neurlayer4.txt  sample_metdata.txt  weights_connlayer1.txt  weights_connlayer2.txt  weights_connlayer3.txt
include/: app.h  calculations.h  neural_net.h
src/: app.c  calculations.c  main.c  neural_net.c
